--- a/style.css
+++ b/style.css
@@ -79,6 +79,16 @@ li a:hover {
   font-family: cursive;
 }
 
-.Body h2 {
+.Body p {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-size: 24px;
+}
+
+h2 {
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  text-align: center;
+}
+
+iframe {
+  padding-top: 30px;
 }
